feature/ 上傳jwt token驗證與創建的方法與註冊設定_初版 (尚未調整完成) 以及把整體資料夾化分架構分好

--- a/dot_net/Hackathon_WebAPI/appsettings.json
+++ b/dot_net/Hackathon_WebAPI/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "JwtSettings": {
+    "SecretKey": "HackathonJwtTokenrStUvWxYz012345",
+    "Issuer": "HackathonJwtAuth",
+    "JwtUser": "HackathonUser"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
