--- a/flutter/TownPass-Services/package.json
+++ b/flutter/TownPass-Services/package.json
@@ -21,8 +21,8 @@
     "axios": "^1.7.2",
     "pinia": "2.1.7",
     "v-calendar": "3.1.2",
-    "vue": "3.4.21",
-    "vue-router": "4.3.0"
+    "vue": "^3.4.38",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "1.8.0",
