移除敏感資料

--- a/dot_net/CsvToFirestoreApp/CsvToFirestoreApp/CsvToFirestoreApp.csproj
+++ b/dot_net/CsvToFirestoreApp/CsvToFirestoreApp/CsvToFirestoreApp.csproj
@@ -19,6 +19,9 @@
     <None Update="firestore.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="hackathon2024-1b87f-firebase-adminsdk-nxddf-3efc91096b.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
